--- a/.github/workflows/notion_sync.yml
+++ b/.github/workflows/notion_sync.yml
@@ -11,11 +11,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Fetch Notion Data
-        uses: yucchiy/notion-to-markdown@main
+        uses: yucchiy/notion-to-markdown@v1
         with:
           notion_auth_token: ${{ secrets.NOTION_TOKEN }}
           notion_database_id: ${{ secrets.NOTION_DATABASE_ID }}
-          output_path: './projects' # This will download your projects as files
+          output_directory_path_template: './projects' # Fixed input name
 
       - name: Inject into HTML
         run: |
@@ -31,8 +31,8 @@ jobs:
 
       - name: Commit and Push
         run: |
-          git config --global user.name "Utkarsh Singh"
-          git config --global user.email "utkarsh@example.com"
+          git config --global user.name "Utkarsha Kumar"
+          git config --global user.email "utkarshsinghinbox@gmail.com"
           git add .
           git commit -m "Fix: Switch to supported Notion sync tool" || exit 0
           git push
