--- a/.github/workflows/notion_sync.yml
+++ b/.github/workflows/notion_sync.yml
@@ -20,25 +20,22 @@ jobs:
       - name: Inject into HTML
         run: |
           PROJECTS_HTML=""
-          # List all markdown files in the projects directory
-          # and format them into an HTML list
-          if [ -d "./projects" ]; then
+          if [ -d "./projects" ] && [ "$(ls -A ./projects)" ]; then
             for file in ./projects/*.md; do
-              [ -e "$file" ] || continue
               filename=$(basename "$file" .md)
-              # Use the filename as the title for now
+              # Create a pretty title from the filename
               title=$(echo "$filename" | sed 's/-/ /g' | awk '{for(i=1;i<=NF;i++)sub(/./,toupper(substr($i,1,1)),$i)}1')
-              PROJECTS_HTML="${PROJECTS_HTML}<li><a href=\"/projects/$filename\" class=\"group flex items-center hover:text-gray-600 transition-colors\"><span>$title</span><span class=\"ml-2 opacity-0 group-hover:opacity-100 transition-opacity\">→</span></a></li>"
+              PROJECTS_HTML="${PROJECTS_HTML}<li><a href=\"#\" class=\"group flex items-center hover:text-gray-600 transition-colors\"><span>$title</span><span class=\"ml-2 opacity-0 group-hover:opacity-100 transition-opacity\">→</span></a></li>"
             done
+          else
+            PROJECTS_HTML="<li><p class='text-gray-400'>No projects found in Notion. Check the RequestPublishing checkbox.</p></li>"
           fi
 
-          # If no projects were found, show a placeholder
-          if [ -z "$PROJECTS_HTML" ]; then
-            PROJECTS_HTML="<li><p class='text-gray-400'>No published projects found.</p></li>"
-          fi
+          # Wrap in a UL tag
+          FINAL_CONTENT="<ul class=\"space-y-6\">\n$PROJECTS_HTML\n</ul>"
           
-          # Replace the content between our specific markers in index.html
-          sed -i "/<!-- NOTION_PROJECTS_START -->/,/<!-- NOTION_PROJECTS_END -->/c\<!-- NOTION_PROJECTS_START -->\n<ul class=\"space-y-6\">\n$PROJECTS_HTML\n</ul>\n<!-- NOTION_PROJECTS_END -->" index.html
+          # Replace content between markers using a temporary file to avoid character escaping issues
+          perl -i -0777 -pe "s/(<!-- NOTION_PROJECTS_START -->).*(<!-- NOTION_PROJECTS_END -->)/\${1}\n$FINAL_CONTENT\n\${2}/s" index.html
 
       - name: Commit and Push
         run: |
